# think_menu

./: Cargo.toml  README.md
shell/: check_mod.sh  permissions_configure.sh  permissions_remove.sh
src/: main.rs  terminal.rs  think_menu.rs  types.rs
